# qaul.net

qaul_ui/lib/screens/home/tabs/chat/: chat_tab.dart
qaul_ui/lib/screens/home/tabs/chat/widgets/: chat.dart
qaul_ui/snap/: snapcraft.yaml
rust/: Cargo.toml
rust/ble_module/: Cargo.toml
rust/ble_module/src/: ble_connector.rs  main.rs
rust/ble_module/src/ble/: ble_connect.rs  ble_manager.rs  ble_service.rs  ble_uuids.rs  mod.rs  utils.rs
rust/ble_module/src/rpc/: err.rs  mod.rs  msg_loop.rs  utils.rs
rust/libqaul/: Cargo.toml
rust/libqaul/src/: lib.rs
rust/libqaul/src/api/: c.rs  mod.rs
