[package]
name = "ble_module"
version = "0.1.0"
authors = ["qaul community <contact@qaul.net>"]
edition = "2021"
license = "AGPL"

[dependencies]
async-trait = "0.1.64"
bluer = "0.15.7"
bytes = "1.4.0"
crossbeam-channel = "0.5.6"
filetime = "0.2.19"
log = "0.4"
prost = "0.11.6"
simplelog = "0.12.0"
state = "0.5.3"
tokio = { version = "1.25.0", features = ["full"]}

